# charmer

./: .gitmodules  LICENSE  README.md
clangindex/: CMakeLists.txt
clangindex/src/: main.cpp
proto/: functioninfo.proto
sqlitepb/: install-venv.sh  protoc-gen-sqlite  sqlitepb.py
